--- a/views/pages/report_page.html
+++ b/views/pages/report_page.html
@@ -5,6 +5,10 @@
     📊 Report Bulanan Per Kelas
   </a>
 
+  <a href="/report/bulanan/kelas-detail" class="p-4 border rounded shadow hover:bg-gray-100">
+    📊 Report Detail Bulanan Per Kelas
+  </a>
+
   <a href="/report/mingguan/kelas" class="p-4 border rounded shadow">
     📅 Report Mingguan Per Kelas
   </a>
