add report siswa

--- a/views/pages/report_page.html
+++ b/views/pages/report_page.html
@@ -2,18 +2,18 @@
 
 <div class="grid grid-cols-2 gap-4">
   <a href="/report/bulanan/kelas" class="p-4 border rounded shadow hover:bg-gray-100">
-    📊 Report Bulanan Per Kelas
+    📊 Report Rekap Bulanan Kelas
   </a>
 
   <a href="/report/bulanan/kelas-detail" class="p-4 border rounded shadow hover:bg-gray-100">
-    📊 Report Detail Bulanan Per Kelas
+    📊 Report Detail Bulanan Kelas
   </a>
 
   <a href="/report/mingguan/kelas" class="p-4 border rounded shadow">
     📅 Report Mingguan Per Kelas
   </a>
 
-  <a href="/report/bulanan/siswa" class="p-4 border rounded shadow">
-    👤 Report Bulanan Per Siswa
+  <a href="/report/detail-siswa" class="p-4 border rounded shadow">
+    👤 Report Detail Siswa
   </a>
 </div>
