--- a/views/pages/report_page.html
+++ b/views/pages/report_page.html
@@ -2,11 +2,11 @@
 
 <div class="grid grid-cols-2 gap-4">
   <a href="/report/bulanan/kelas" class="p-4 border rounded shadow hover:bg-gray-100">
-    📊 Report Rekap Bulanan Kelas
+    📊 Report Rekap Bulanan Kehadiran Siswa
   </a>
 
   <a href="/report/bulanan/kelas-detail" class="p-4 border rounded shadow hover:bg-gray-100">
-    📊 Report Detail Bulanan Kelas
+    📊 Report Detail Bulanan Kehadiran Siswa
   </a>
 
   <a href="/report/mingguan/kelas" class="p-4 border rounded shadow">
@@ -14,6 +14,6 @@
   </a>
 
   <a href="/report/detail-siswa" class="p-4 border rounded shadow">
-    👤 Report Detail Siswa
+    👤 Report Detail Data Siswa
   </a>
 </div>
