--- a/views/pages/report_page.html
+++ b/views/pages/report_page.html
@@ -9,8 +9,8 @@
     📊 Report Detail Bulanan Kehadiran Siswa
   </a>
 
-  <a href="/report/mingguan/kelas" class="p-4 border rounded shadow">
-    📅 Report Mingguan Per Kelas
+  <a href="/report/harian/kelas" class="p-4 border rounded shadow">
+    📅 Report Harian Kehadiran Siswa
   </a>
 
   <a href="/report/detail-siswa" class="p-4 border rounded shadow">
